[project]
name = "mcp-server-gemini"
version = "1.0.0"
description = "Gemini AI MCP Server for Cloud Run"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.8.0",
    "google-generativeai>=0.8.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "uvicorn[standard]>=0.30.0",
    "starlette>=0.38.0",
]

[project.scripts]
mcp-server-gemini = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
