[project]
name = "mcp-server-gemini"
version = "2.0.0"
description = "Gemini AI MCP Server with Image Generation for Cloud Run"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "google-generativeai>=0.8.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "sse-starlette>=2.0.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
